--- a/src/Pages/BookingConfirmation/BookingConfirmation.css
+++ b/src/Pages/BookingConfirmation/BookingConfirmation.css
@@ -6,3 +6,7 @@
     margin-right: auto;
     text-align: center;
 }
+.confirmation-container > p, h2, h3{
+    padding:0;
+    margin-left: 20px;
+}
